[package]
name = "comparison"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
criterion = "0.5.1"

[dependencies]
ahash = "0.8.11"
clap = { version = "4.5", features = ["derive"] }
gen_data = { path = "../gen_data" }
gumbel_estimation = { path = "../gumbel_estimation" }
hyperloglogplus = "0.4.1"
indicatif = { version = "0.17", features = ["rayon"] }
itertools = "0.13.0"
rand = "0.8.5"
rayon = "1.8"

[[bench]]
name = "benchmark"
harness = false
